# BytePairEncoding-CPP

./: .gitignore  .gitmodules  LICENSE  README.md  main.cpp  main.py  meson.build  pyproject.toml  requirement.txt
core/: BPE.py  __init__.py  _core.cpp  compile.sh  main.cpp  meson.build  module.py  python_entry_point.cpp  test.py
core/include/: BPE_Common.hpp  BPE_DictionaryInterFace.hpp  BPE_EncodingPatterns.hpp  BPE_MemoryManagement.hpp  BPE_Tokens.hpp  BytePairEncoding.hpp  _Dictionary_InterFace.hpp  _Error_Handler.hpp  _MemoryManagement.hpp  _Token.hpp  common.cpp  common.hpp
core/src/: _core.cpp
include/: BytePairEncoding.hpp  _Dictionary_InterFace.hpp  _Error_Handler.hpp  _Token.hpp
subprojects/packagefiles/: pybind11.wrap
